--- a/src/app/components/submit-fate/submit-fate.component.html
+++ b/src/app/components/submit-fate/submit-fate.component.html
@@ -15,14 +15,28 @@
 </div>
 
 <form [@fadeInOut] class="submit-form-body" *ngIf="showForm">
-  <mat-form-field class="sign-select-field">
+  <mat-form-field class="fate-input-field">
+    <textarea
+      matInput
+      autocomplete="off"
+      #textInput
+      [placeholder]="'Fate'"
+      [formControl]="fateFormControl">
+      </textarea>
+  </mat-form-field>
+  <mat-form-field
+    class="sign-select-field"
+    #signSelect>
+    <mat-label>
+      Select a Sign
+    </mat-label>
     <mat-select
       [formControl]="signFormControl"
       multiple>
-      <mat-option *ngFor="let sign of signs" [value]="sign">
-        {{ sign }}
-      </mat-option>
-    </mat-select>
+    <mat-option *ngFor="let sign of signs" [value]="sign">
+      {{ sign }}
+    </mat-option>
+  </mat-select>
   </mat-form-field>
   <mat-form-field class="mandatory-second-field" style="display: none">
     <input
@@ -32,20 +46,12 @@
       [placeholder]="'Fate'"
       [formControl]="secondFormControl">
   </mat-form-field>
-  <mat-form-field class="fate-input-field">
-    <input
-      matInput
-      autocomplete="off"
-      #textInput
-      [placeholder]="'Fate'"
-      [formControl]="fateFormControl">
-  </mat-form-field>
   <button class="g-recaptcha"
     data-sitekey="6LdXYgAVAAAAACz4Ls8ROtkAKUdK-RVXbs3TTszt"
     data-callback='onSubmit'
     data-action='submit'
     mat-button
     (click)="onEnter()">
-    <mat-icon>check</mat-icon>
+      <mat-icon>check</mat-icon>
   </button>
 </form>
