--- a/src/app/components/submit-fate/submit-fate.component.html
+++ b/src/app/components/submit-fate/submit-fate.component.html
@@ -2,6 +2,7 @@
   <button
     [@fadeInOut]
     class="show-form"
+    (click)="onAbout()"
     mat-button>
     <mat-icon>sort</mat-icon>
   </button>
